# inflation-report-austria

./: .gitignore  Makefile  README.md  analysis.py  data_fetcher.py  html_report_generator.py  main.py  pyproject.toml  report_generator.py  requirements.txt  visualization.py
.github/workflows/: ci.yml
inflation_report/: __init__.py  constants.py  data.py  pipeline.py  visualization.py
inflation_report/reporting/: __init__.py
